--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-torch==1.7.0+cpu
+torch==1.7.0
 numpy==1.19.3
+imageio
+scipy
+six
+numpy
+python-dateutil==2.7.3
+tensorboard==1.12.2
+tensorboardX==1.6
+tensorflow-gpu==1.12.0
+tqdm==4.29.1
