--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 torch==1.7.0
-numpy==1.19.3
 imageio
 scipy
 six
@@ -7,5 +6,6 @@ numpy
 python-dateutil==2.7.3
 tensorboard==1.12.2
 tensorboardX==1.6
-tensorflow-gpu==1.12.0
+tensorflow-gpu
+torchvision
 tqdm==4.29.1
