--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ numpy
 python-dateutil==2.7.3
 tensorboard==1.12.2
 tensorboardX==1.6
-tensorflow-gpu
+tensorflow-gpu==1.12.0
 torchvision
 tqdm==4.29.1
