fixed some stuff

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-
+data
+logs
 # Unit test / coverage reports
 htmlcov/
 .tox/
